--- a/instructions/instructions.tex
+++ b/instructions/instructions.tex
@@ -39,7 +39,14 @@ However, you will be expected to know what all of your code does.
 Be ready to explain it as I might ask questions during the interview.
 
 \section*{Task 1 - Getting a Repo Set-up}
-The first thing I would like you to do is fork the ``pre-interview'' repository where these instructions are located.
+The first thing I would like you to do is fork the ``pre-interview'' repository.
+It is located at \url{https://github.com/will-leeson/pre-interview}.
+To do so, you will need to have a Github account.
+If you don't have one, now would be a great time to make one. 
+Github is used a lot in computer science.
+Github requires you to use SSH keys to download and push to repositories, so you will need to set those up like you did for CSGit.
+Here is a nice tutorial: \href{https://docs.github.com/en/authentication/connecting-to-github-with-ssh/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent}{SSH Key Github Tutorial}.
+Once you have a github account you need to create a ``fork'' of this repository.
 A fork is basically like taking another git repository and branching off of it to make a new repository.
 Once you have forked the repository, clone it and invite me to your repo (my github username is will-leeson).
 In the README file, please put your name and one fun fact about you.
